--- a/_posts/0000-01-02-easc2793.md
+++ b/_posts/0000-01-02-easc2793.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our easc2793's slide!"
 ---
 This is easc2793 slide
 Use the left arrow to go back!
